--- a/gminder/src/Components/Box/Box.css
+++ b/gminder/src/Components/Box/Box.css
@@ -19,13 +19,48 @@
 	float: left;
 }
 
-body{
-	background-repeat: no-repeat;
-  background-image: url(http://res.cloudinary.com/sepuckett86/image/upload/v1515668911/texel_beach_ll16fl.jpg);
-  background-size:cover;
-  background-attachment: fixed;
-	height: 100%;
+.button-span-2 {
+  border: solid;
+  border-radius: 10px;
+  border-color: #46B3B3;
+  border-width: 2px;
+  color: black;
+  padding: 5px 10px;
+  margin: 0px;
+  width: 30%;
+  text-align: center;
+	font-family: 'Comfortaa', cursive;
+  text-decoration: none;
+  font-size: 24px;
+  background-color: rgba(255, 255, 255, 0.3);
+
 }
+
+.button-span-2:hover {
+    background-color: rgba(255, 255, 255, 1);
+}
+
+.button-span-3 {
+  border: solid;
+  border-radius: 10px;
+  border-color: #46B3B3;
+  border-width: 2px;
+  color: black;
+  padding: 5px 10px;
+  margin: 0px;
+  width: 30%;
+  text-align: center;
+	font-family: 'Comfortaa', cursive;
+  text-decoration: none;
+  font-size: 24px;
+  background-color: rgba(255, 255, 255, 0.6);
+
+}
+
+.button-span-3:hover {
+    background-color: rgba(255, 255, 255, 0.9);
+}
+
 
 header{
   color: white;
@@ -45,7 +80,6 @@ header{
 .nav-link:hover {
   background-color: rgba(255, 255, 255, 0.3);
 }
-
 
 .backfill {
 	font-size: 16px;
